--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ ul {
     list-style: none;
 }
 body {
-    font-family: "roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: var(--background-color);
 }
