--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --logo-color-part: #2e2f42;
   --contacts-color: #434455;
   --text-color: #2e2f42;
+  --bg-color-section: #2e2f42;
 }
 * {
   margin: 0;
@@ -41,7 +42,9 @@ body {
   letter-spacing: 0.02em;
 }
 .link:hover,
-.link:focus {
+.link:focus,
+.button:hover,
+.button:focus {
   color: #404bbf;
 }
 .contacts {
@@ -55,4 +58,28 @@ body {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   color: var(--contacts-color);
+}
+.slogan {
+  background-color: var(--bg-color-section);
+}
+.text-slogan {
+  text-align: center;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.07; /* 107.143% */
+  letter-spacing: 0.02em;
+}
+.button {
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  cursor: pointer;
 }
