--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
-.title-doing {
+.title {
   font-size: 36px;
   text-align: center;
   font-weight: 700;
